simplify things from jekyll new

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: "Happy Jekylling!"
 ---
 
-## You're ready to go!
+<main>
+<h2>You're ready to go!</h2>
 
 Start developing your Jekyll website.
+</main>
