--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 ---
 layout: default
-title: "Happy Jekylling!"
+title: "Portfolio"
+additional_styles: ["components/whoami"]
 ---
 
 <main>
-<h2>You're ready to go!</h2>
+    <div class="whoami">
+        <div class="description">
+            2018 Microsoft Office Security, 2019 Microsoft One Customer Voice Intern.
+            <br />
+            Software Engineering Student at the Rochester Institute of Technology. 
+        </div>
 
-Start developing your Jekyll website.
+        <div class="links">
+            <a href="https://github.com/galenguyer" class="profilebutton">Github</a>
+            <a href="https://cdn.galenguyer.com/doc/Galen-Guyer-Resume-latest.pdf" class="profilebutton">Resume</a>
+        </div>
+    </div>
 </main>
