--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: "Portfolio"
 id: index
-additional_styles: ["components/whoami"]
+styles: ["index"]
 ---
 
 <div class="whoami">
