--- a/contact.html
+++ b/contact.html
@@ -5,3 +5,11 @@ id: contact
 styles: ["main"]
 ---
 
+<h1>Contact Me!</h1>
+<p>Email is the best way to reach me. Here's some addresses you can use:</p>
+<ul>
+    <li><a href="mailto:{{ 'galen@galenguyer.com' | encode_email }}"><span class="mobile-hidden">galen (at) </span>galenguyer.com</a> (preferred)</li>
+    <li><a href="mailto:{{ 'galenguyer@outlook.com' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>outlook.com</a></li>
+    <li><a href="mailto:{{ 'galenguyer@protonmail.com' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>protonmail.com</a> or <a href="mailto:{{ 'galenguyer@pm.me' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>pm.me</a> </li>
+    <li><a href="mailto:{{ 'galenguyer@riseup.net' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>riseup.net</a></li>
+</ul>
