add gpg public key and discord

--- a/contact.html
+++ b/contact.html
@@ -13,3 +13,7 @@ styles: ["main"]
     <li><a href="mailto:{{ 'galenguyer@protonmail.com' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>protonmail.com</a> or <a href="mailto:{{ 'galenguyer@pm.me' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>pm.me</a> </li>
     <li><a href="mailto:{{ 'galenguyer@riseup.net' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>riseup.net</a></li>
 </ul>
+
+<p>I can be found on <a href="https://discord.com">discord.com</a> as <code>chef#1911</code></p>
+
+<p>My gpg key with the fingerprint <code>B00B 5AAA 0E09 6100</code> can be found <a href="/gpg.txt">on this page</a> or at <a href="https://gpg.galenguyer.com">gpg.galenguyer.com</a></p>
