--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@ styles: ["index"]
 
     <div class="links">
         <a href="https://github.com/galenguyer" class="profilebutton">Github</a>
-        <a href="https://cdn.galenguyer.com/doc/Galen-Guyer-Resume-latest.pdf" class="profilebutton">Resume</a>
+        <a href="https://resume.galenguyer.com" class="profilebutton">Resume</a>
     </div>
 </div>
