update cdn project link

--- a/projects/index.html
+++ b/projects/index.html
@@ -13,6 +13,7 @@ styles: ["main"]
 <p><a href="https://github.com/galenguyer/dotfiles">dotfiles</a> - my dotfiles</p>
 <p><a href="https://github.com/galenguyer/traefik">traefik</a> - my traefik configs for my main server. requires <a href="https://github.com/galenguyer/composer">composer</a> due to how files are fragmented</p>
 <p><a href="https://github.com/galenguyer/composer">composer</a> - a c program to take many docker-compose.*.yaml files and pass them into docker-compose properly. written for <a href="https://github.com/galenguyer/traefik">traefik</a></p>
+<p><a href="https://github.com/galenguyer/cdn">cdn</a> - terraform, ansible and shell scripts to deploy and manage my cdn</p>
 <p><a href="https://github.com/galenguyer/hancock">hancock</a> - a small go project to help manage my personal root ca and certificates signed by it</p>
 <p><i><a href="https://github.com/galenguyer/retina">retina</a> - a quick uptime monitor</i></p>
 <p><a href="https://github.com/galenguyer/vigilant">vigilant</a> - a quick docker process monitor with a web ui</p>
@@ -29,7 +30,6 @@ styles: ["main"]
 <p><a href="https://github.com/galenguyer/docker-demo">docker-demo</a> - a 101 intro to docker, covering building a docker image and deploying with docker-compose</p>
 <p><a href="https://github.com/galenguyer/rit-covid-dashboard">rit-covid-dashboard</a> - the frontend for the rit covid dashboard</p>
 <p><a href="https://github.com/galenguyer/rit-covid-poller">rit-covid-poller</a> - the backend for the rit covid dashboard</p>
-<p><a href="https://github.com/galenguyer/cdn-configs">cdn-config</a> - terraform and ansible files to deploy my cdn</p>
 <p><a href="https://github.com/galenguyer/shant">shant</a> - hi. i'm a shant (for <a href="https://sauravmakes.tech">sauravmakes.tech</a>)</p>
 <p><i><a href="https://github.com/galenguyer/photosink">photosink</a> - a static photo gallery generator</i></p>
 <p><i><a href="https://github.com/galenguyer/gay">gay</a> - a cli tool to print a gay flag</i></p>
