--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@ styles: ["index"]
 
     <div class="links">
         <a href="https://github.com/galenguyer" class="profilebutton">Github</a>
-        <a href="https://galenguyer.com/assets/resume.pdf" class="profilebutton">Resume</a>
+        <a href="/assets/resume.pdf" class="profilebutton">Resume</a>
     </div>
 </div>
