--- a/testimonials.html
+++ b/testimonials.html
@@ -13,3 +13,4 @@ styles: ["main"]
 
 <p>Galen writes horrifying one liners - <i>Max, September 2020</i></p>
 <p>if theres one thing youre good at when it comes to coding, its figuring out how to do things that are fucking outrageous or shouldnt be possible - <i>Megan, March 2021</i></p>
+<p>That does sound horrifying - <i>Sinc, July 2021</i></p>
