--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -18,3 +18,4 @@ styles: ["main"]
 <p>That does sound horrifying - <i>Sinc, July 2021</i></p>
 <p><a href="./protonmail-email">An email from ProtonMail</a> - <i>Daniel Huigens (ProtonMail Cryptography Lead), July 2021</i></p>
 <p>I have no words - <i>Winter, July 2021</i></p>
+<p>could you do the world a favor and channel your energy into something a little less cursed - <i>Shantanav, August 2021</i></p>
