--- a/contact.html
+++ b/contact.html
@@ -17,4 +17,4 @@ styles: ["main"]
 
 <p>I can be found on <a href="https://discord.com">discord.com</a> as <code>chef#1911</code></p>
 
-<p>My gpg key with the fingerprint <code>B00B 5AAA 0E09 6100</code> can be found <a href="/gpg.txt">on this page</a> or at <a href="https://gpg.galenguyer.com">gpg.galenguyer.com</a></p>
+<p>My gpg key with the fingerprint <code>AFF5 BD5A 6A41 7797<code> can be found <a href="/gpg.txt">on this page</a> or at <a href="https://gpg.galenguyer.com">gpg.galenguyer.com</a></p>
