Update Discord username, add Mastodon and Matrix

--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,14 @@ styles: ["main"]
 <ul>
     <li><a href="mailto:{{ 'galen@galenguyer.com' | encode_email }}"><span class="mobile-hidden">galen (at) </span>galenguyer.com</a> (preferred)</li>
     <li><a href="mailto:{{ 'galenguyer@outlook.com' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>outlook.com</a></li>
-    <li><a href="mailto:{{ 'galenguyer@protonmail.com' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>protonmail.com</a> or <a href="mailto:{{ 'galenguyer@pm.me' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>pm.me</a> </li>
+    <li><a href="mailto:{{ 'galenguyer@protonmail.com' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>protonmail.com</a> or <a href="mailto:{{ 'galenguyer@pm.me' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>pm.me</a></li>
     <li><a href="mailto:{{ 'galenguyer@riseup.net' | encode_email }}"><span class="mobile-hidden">galenguyer (at) </span>riseup.net</a></li>
 </ul>
 
-<p>I can be found on <a href="https://discord.com">discord.com</a> as <code>chef#1911</code></p>
+<p>I can be found on <a href="https://discord.com">discord.com</a> as <code>k9fgt#1553</code></p>
+
+<p>I'm on Mastodon now! Find me at <a href="https://social.freedomclub.fans/@chef"><code>@chef@freedomclub.fans</code></a></p>
+
+<p>I very infrequently use Matrix. My username is <code>@chef:freedomclub.fans</code>, though I likely won't see your message for a while</p>
 
 <!-- <p>My gpg key with the fingerprint <code>AFF5 BD5A 6A41 7797</code> can be found <a href="/gpg.txt">on this page</a> or at <a href="https://gpg.galenguyer.com">gpg.galenguyer.com</a></p> -->
