update some fedi stuff

--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@ styles: ["main"]
 
 <p>I can be found on <a href="https://discord.com">discord.com</a> as <code>k9fgt#1553</code></p>
 
-<p>I'm on Mastodon now! Find me at <a href="https://social.freedomclub.fans/@chef"><code>@chef@freedomclub.fans</code></a></p>
+<p>I'm on Mastodon now! Find me at <a href="https://mastodon.radio/@k9fgt"><code>@k9fgt@mastodon.radio</code></a></p>
 
-<p>I very infrequently use Matrix. My username is <code>@chef:freedomclub.fans</code>, though I likely won't see your message for a while</p>
+<!-- <p>I very infrequently use Matrix. My username is <code>@chef:freedomclub.fans</code>, though I likely won't see your message for a while</p> -->
 
 <!-- <p>My gpg key with the fingerprint <code>AFF5 BD5A 6A41 7797</code> can be found <a href="/gpg.txt">on this page</a> or at <a href="https://gpg.galenguyer.com">gpg.galenguyer.com</a></p> -->
