--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@ styles: ["index"]
 
 <div class="whoami">
     <div class="description">
-        2018 Microsoft Office Security, 2019 Microsoft One Customer Voice Intern.
+        <!-- 2018 Microsoft Office Security, 2019 Microsoft One Customer Voice Intern.
         <br />
-        Software Engineering Student at the Rochester Institute of Technology. 
+        Software Engineering Student at the Rochester Institute of Technology. -->
+        General computer gremlin, mostly writing Rust
+        <br />
+        Making software for radio and systems administration
+        <br />
+        DevOps Engineer, Bryx
     </div>
 
     <div class="links">
         <a href="https://github.com/galenguyer" class="profilebutton">Github</a>
-        <a href="/assets/resume.pdf" class="profilebutton">Resume</a>
+        <a href="https://static.galenguyer.com/resume/Galen-Guyer-Resume.pdf" class="profilebutton">Resume</a>
     </div>
 </div>
