Add a few new testimonials

--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -7,7 +7,7 @@ permalink: /testimonials/
 styles: ["main"]
 ---
 
-<h1>Testimonials</h1>
+<h1>{{ page.title }}</h1>
 <h3>{{ page.description }}</h3>
 <hr>
 
@@ -19,3 +19,8 @@ styles: ["main"]
 <p><a href="./protonmail-email">An email from ProtonMail</a> - <i>Daniel Huigens (ProtonMail Cryptography Lead), July 2021</i></p>
 <p>I have no words - <i>Winter, July 2021</i></p>
 <p>could you do the world a favor and channel your energy into something a little less cursed - <i>Shantanav, August 2021</i></p>
+<p>You have been upgraded from 'highly prudent' to 'national treasure' - <i>Polge, November 2022</i></p>
+<p>You terrify me - <i>Aidan, March 2023</i></p>
+<p>Absolutely unhinged - <i>Cole, April 2023</i></p>
+<p>You are gay af, and a problem for every other reason, but being gay isn’t one of them - <i>Nick, May 2023</i></p>
+<p>Public enemy #1 of the Monroe County trunk system - <i>Nick, May 2023</i></p>
