testimonials: include question mark in italics

--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -13,7 +13,7 @@ styles: ["main"]
 
 <p>Galen writes horrifying one liners - <i>Max, September 2020</i></p>
 <p>if theres one thing youre good at when it comes to coding, its figuring out how to do things that are fucking outrageous or shouldnt be possible - <i>Megan, March 2021</i></p>
-<p>are you so sure that anything you write will be <i>better</i>? - <i>Max, March 2021</i></p>
+<p>are you so sure that anything you write will be <i>better?</i> - <i>Max, March 2021</i></p>
 <p>Is that a freakin distance formula in your Mongo query?! - <i>Isaiah, July 2021</i></p>
 <p>That does sound horrifying - <i>Sinc, July 2021</i></p>
 <p><a href="./protonmail-email">An email from ProtonMail</a> - <i>Daniel Huigens (ProtonMail Cryptography Lead), July 2021</i></p>
