add testimonial from philo

--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -24,3 +24,4 @@ styles: ["main"]
 <p>Absolutely unhinged - <i>Cole, April 2023</i></p>
 <p>You are gay af, and a problem for every other reason, but being gay isn’t one of them - <i>Nick, May 2023</i></p>
 <p>Public enemy #1 of the Monroe County trunk system - <i>Nick, May 2023</i></p>
+<p>i love waking up to this level of autism - <i>Philo, May 2023</i></p>
