--- a/rit-emergency-numbers.html
+++ b/rit-emergency-numbers.html
@@ -6,14 +6,14 @@ styles: ["book-h3-align-left"]
 ---
 <h1>RIT Emergency Numbers</h1>
 <br>
-<p><strong>Updated: 01 October 2020</strong></p>
+<p><strong>Updated: October 23, 2023</strong></p>
 <p>These are some of the Emergency, Urgency, and Non-emergency contact numbers I’ve collected. Please be aware that these numbers may change, or services may differ. I’ve tried to classify numbers by the services they offer (voice, tty, vp, text), but this information isn’t always available or clear.</p>
 <h2 id="national-or-regional-services">National or Regional Services</h2>
-<h3>Suicide Hotline (National Suicide Prevention Lifeline)</h3>
+<h3>Suicide and Crisis Lifeline</h3>
 <ul>
-    <li>1-800-273-8255 (voice)</li>
-    <li>1-800-799-4889 (tty)</li>
-    <li><a href="https://suicidepreventionlifeline.org/">suicidepreventionlifeline.org</a> (web chat)</li>
+    <li>988 (voice/text)</li>
+    <li>711 then 988 (tty)</li>
+    <li><a href="https://988lifeline/">988lifeline.org</a> (web chat)</li>
 </ul>
 <h3>Crisis Text Line</h3>
 <ul>
@@ -61,24 +61,20 @@ styles: ["book-h3-align-left"]
     <li>(585) 428-7600 (tty/tdd)</li>
 </ul>
 <h2 id="rit-specific-contacts">RIT specific contacts</h2>
-<h3>RIT Emergency</h3>
+<h3>RIT Camus Safety</h3>
 <ul>
-    <li>(585) 475-3333 (voice/tty)</li>
+    <li><b>emergency: (585) 475-3333</b> (voice/tty)</li>
     <li>(585) 205-8333 (text)</li>
+    <li>(585) 475-2853 (voice)</li>
 </ul>
-<h3>RIT Campus Safety</h3>
+<h3>RIT CAPS (Counseling and Psychological Services)</h3>
 <ul>
-    <li>General (585) 475-2853 (voice/tty)</li>
-    <li>Text (585) 205-8333</li>
+    <li>(585) 475-2261 (during business hours)</li>
+    <li>(855) 436-1245 (urgent matters outside of business hours)</li>
 </ul>
-<h3>RIT Title IX Office</h3>
+<h3>RIT CARES (Campus, Advocacy, REsponse, and Support)</h3>
 <ul>
-    <li><em>For emergencies, use RIT Emergency numbers</em></li>
-    <li><a href="https://www.rit.edu/fa/compliance/title-ix">https://www.rit.edu/fa/compliance/title-ix</a> (online form, email, phone)</li>
-</ul>
-<h3>RIT CARES</h3>
-<ul>
-    <li>(585) 474-2261 (voice or text) during business hours</li>
+    <li>(585) 475-2261 (voice or text) during business hours</li>
     <li>(585) 295-3533 (voice or text) after business hours, weekends</li>
     <li>Support and advocacy team<ul>
             <li><code>CARES is an after-hours service supporting RIT students. A group of trained and dedicated volunteers are available 24-hours a day to respond to RIT students that have been impacted by sexual assault, harassment, relationship violence and/or stalking.</code>
@@ -95,10 +91,10 @@ styles: ["book-h3-align-left"]
         </ul>
     </li>
 </ul>
-<h3>RIT CAPS</h3>
+<h3>RIT Title IX Office</h3>
 <ul>
-    <li>(585) 475-2261 (during business hours)</li>
-    <li>1-855-436-1245 (urgent matters outside of business hours)</li>
+    <li><em>For emergencies, use RIT Emergency numbers</em></li>
+    <li><a href="https://www.rit.edu/fa/compliance/title-ix">https://www.rit.edu/fa/compliance/title-ix</a> (online form, email, phone)</li>
 </ul>
 <h3>RIT Ombuds</h3>
 <p><em>Note these numbers and emails will change if ombuds staff change, please check <a href="https://www.rit.edu/ombuds/">https://www.rit.edu/ombuds/</a> for updated contact details if necessary.</em></p>
@@ -125,7 +121,7 @@ styles: ["book-h3-align-left"]
     <li>(585) 475-5932</li>
     <li>srl@rit.edu</li>
 </ul>
-<h3>NTID Counselling and Academic Advising Services</h3>
+<h3>NTID Counseling and Academic Advising Services</h3>
 <ul>
     <li>(585) 475-6468 (voice)</li>
     <li>(585) 286-4070 (vp)</li>
