--- a/rit-emergency-numbers.html
+++ b/rit-emergency-numbers.html
@@ -13,7 +13,7 @@ styles: ["book-h3-align-left"]
 <ul>
     <li>988 (voice/text)</li>
     <li>711 then 988 (tty)</li>
-    <li><a href="https://988lifeline/">988lifeline.org</a> (web chat)</li>
+    <li><a href="https://988lifeline.org/">988lifeline.org</a> (web chat)</li>
 </ul>
 <h3>Crisis Text Line</h3>
 <ul>
