Add styles for ritcoviddashboard.html

--- a/projects/ritcoviddashboard.html
+++ b/projects/ritcoviddashboard.html
@@ -6,6 +6,7 @@ description:
     Rochester Institute of Technology doesn't provide access to any historical COVID data, so I wrote an app to scrape that
     data, save it, and display it with a React app
 id: ritcoviddashboard
+styles: ["main"]
 ---
 
 <article>
