--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -25,3 +25,4 @@ styles: ["main"]
 <p>You are gay af, and a problem for every other reason, but being gay isn’t one of them - <i>Nick, May 2023</i></p>
 <p>Public enemy #1 of the Monroe County trunk system - <i>Nick, May 2023</i></p>
 <p>i love waking up to this level of autism - <i>Philo, May 2023</i></p>
+<p>I think they're a little too autistic for their own good - <i>Meg, November 2025</i></p>
